# ingestion-workflow-orchestrator

./: .env.worker  .gitignore  .gitmodules  Base  Dockerfile  Dockerfile.server  Dockerfile.worker  Makefile  codemeta.json  docker-compose-dev.yml  docker-compose.yml  dot_env_development_example  dot_env_example  entrypoint-agent.sh  entrypoint.sh  notifications.md  pyproject.toml  readme.md  supervisord.conf
.github/: PULL_REQUEST_TEMPLATE.md
boto_utils/: boto_bucket_downloader.py  (+1 more)
prefect_docker/: .gitignore  Dockerfile  pyproject.toml
prefect_docker/scripts/: config.py  main_cbs_ingestion.py  main_dataverse_nl_ingestion.py  main_easy_ingestion.py  main_ingestion.py  main_liss_ingestion.py  queries.py  settings.toml  start-prefect.sh  utils.py
prefect_docker/scripts/configuration/: config.py  odissei_settings.toml  secrets_example.toml  settings.toml  sicada_settings.toml
prefect_docker/scripts/flows/: cbs_ingestion.py  dataverse_nl_ingestion.py  easy_ingestion.py  liss_ingestion.py  semantic_enrichment.py
prefect_docker/scripts/flows/dataset_workflows/: cbs_ingestion.py  dataverse_ingestion.py  dataverse_nl_ingestion.py  easy_ingestion.py  iisg_ingestion.py  liss_ingestion.py  sicada_ingestion.py
prefect_docker/scripts/flows/entry_workflows/: dataverse_to_dataverse_ingestion.py  enrichment.py  main_cbs_ingestion.py  main_dataverse_ingestion.py  main_dataverse_nl_ingestion.py  main_easy_ingestion.py  main_iisg_ingestion.py  main_liss_ingestion.py  main_sicada_ingestion.py
prefect_docker/scripts/flows/entry_workflows/dataverse_nl_workflows/: main_4tu_ingestion.py  main_avans_ingestion.py  main_fontys_ingestion.py  main_groningen_ingestion.py  main_hanze_ingestion.py  main_hr_ingestion.py  main_lu_ingestion.py  main_maastricht_ingestion.py  main_tiu_ingestion.py  main_trimbos_ingestion.py  main_umcu_ingestion.py  main_uu_ingestion.py  main_vu_ingestion.py
prefect_docker/scripts/flows/workflow_versioning/: workflow_versioner.py
prefect_docker/scripts/tasks/: base_tasks.py  harvest_tasks.py  versioning_tasks.py
(+49 files in other folders)
