[tool.poetry]
name = "prefect_docker"
version = "3.0.0"
description = "Workflow for metadata ingestion into Dataverse"
authors = ["Fjodor van Rijsselberg"]

[tool.poetry.dependencies]
python = "^3.12.5"
prefect = "^3.0.8"
python-dotenv = "^1.0.1"
boto3 = "^1.35.39"
dynaconf = "^3.2.6"
jmespath = "^1.0.1"
pydantic = "^2.9.2"
pydataverse = "^0.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
