[tool.poetry]
name = "prefect_docker"
version = "2.1.0"
description = "Workflow for metadata ingestion into Dataverse"
authors = ["Fjodor van Rijsselberg"]

[tool.poetry.dependencies]
python = "^3.9"
prefect = "^2.0.3"
python-dotenv = "^0.21.0"
boto3 = "^1.26.75"
dynaconf = "^3.1.11"
jmespath = "^1.0.1"
pydantic = "^1.10.0"
pydataverse = "^0.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
